--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/queries.css">
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -17,7 +18,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header nav-open">
     <a href="#">
       <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo">
     </a>
@@ -30,6 +31,11 @@
         <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
       </ul>
     </nav>
+
+    <button class="btn-mobile-nav">
+      <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+      <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+    </button>
   </header>
 
   <main>
@@ -99,12 +105,12 @@
           </p>
         </div>
 
-        <div class="step-box-img">
+        <div class="step-img-box">
           <img src="img/app/app-screen-1.png" class="step-img" alt="iPhone app preferences selection screen">
         </div>
 
         <!-- STEP 02 -->
-        <div class="step-box-img">
+        <div class="step-img-box">
           <img src="img/app/app-screen-2.png" class="step-img" alt="iPhone app meal approving plan screen">
         </div>
 
@@ -127,7 +133,7 @@
           </p>
         </div>
 
-        <div class="step-box-img">
+        <div class="step-img-box">
           <img src="img/app/app-screen-3.png" class="step-img" alt="iPhone app delivery screen">
         </div>
       </div>
