--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs.">
 
-  <link rel="shortcut-icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" type="image/x-icon">
   <link rel="manifest" href="manifest.webmanifest">
 
@@ -72,8 +72,13 @@
           </div>
         </div>
         <div class="hero-img-box">
-          <img src="img/hero.png" class="hero-img"
-            alt="Woman enjoying food, meals in storage container, and food bowls on a table">
+          <picture>
+            <source srcset="img/hero.webp" type="image/webp">
+            <source srcset="img/hero-min.png" type="image/png">
+
+            <img src="img/hero-min.png" class="hero-img"
+              alt="Woman enjoying food, meals in storage container, and food bowls on a table">
+          </picture>
         </div>
       </div>
     </section>
